= Changelog
== Version Future

* Major Enhancements
  * update to SQLite3 version 3.6.0
  * The SQLite RTree table type is enabled by default

* Minor Enhancements
  * new method Amalgalite::load_table_contents is available as a compile time
    option.  See the RDoc in amalgalite_boot.c

* Bugfixes
  * fix nil exception when using a declared_data_type on primary key column that
    has no declared_data_type

== Version 0.2.4 2008-07-13

* Bugfixes
  * fix compilation when ruby is compiled without pthreads using 

== Version 0.2.3 2008-07-12

* Bugfixes
  * make sure file permissions are all read before shipping gem

== Version 0.2.2 2008-07-12

* Bugfixes
  * Database#pragma should accept a block just like Database#execute does

* compatibility fix
  * convert to using extconf.rb instead of mkrf to enable compilation as a
    direct ruby extension in the ruby source tree

== Version 0.2.1 - 2008-07-05

* Bugfixes
  * make sure that the pthread support in sqlite3 matches that of ruby
  * fix schema reloading in the example scripts

== Version 0.2.0 - 2008-07-04

* Major Enhancements
  * blob support, both incremental access and normal access

* Minor Enhancements
  * added examples/gem_db.rb script demonstrating taps and prepared statements
  * added examples/schema-info.rb script demonstrating meta information
  * added examples/blob.rb demonstrating incremental blob IO
  * added acces to the SQLite3 errcode and errmsg api
  
* Bugfixes
  * added taps.rb for requiring
  * fixed prepared statement reset
  * caught an error in executing prepared statements earlier in the process so
    the correct error is reported

== Version 0.1.0 - 2008-06-21

* Initial public release